--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -19,7 +19,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "codegen": "protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_opt=nestJs=true --ts_proto_out=./codegen -I../protos ../protos/users.proto"
+    "codegen": "protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_opt=nestJs=true --ts_proto_out=./src/codegen -I../protos ../protos/users.proto"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.8.0",
